--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm ci
 
       - name: Run linter
-        run: npm run lint
+        run: npm run lint:check
 
       - name: Run type check
         run: npm run compile
@@ -39,7 +39,7 @@ jobs:
         run: npm run package
 
       - name: Publish to VSCode Marketplace
-        run: npm run publish
+        run: npx vsce publish -p $VSCE_PAT
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
 
