--- a/package.json
+++ b/package.json
@@ -153,8 +153,8 @@
     "watch": "node build.js --watch",
     "compile": "tsc --noEmit",
     "pretest": "npm run compile && npm run lint:check",
-    "lint": "eslint src --ext ts --fix",
-    "lint:check": "eslint src --ext ts",
+    "lint": "eslint src --fix",
+    "lint:check": "eslint src",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "vscode-test",
     "package": "vsce package",
