--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,14 +2,21 @@ name: CI
 
 on:
   push:
-    branches: [ main, master, develop ]
+    branches: [main, master, develop]
+    paths-ignore:
+      - "docs/**"
+      - "**.md"
+      - ".vitepress/**"
   pull_request:
-    branches: [ main, master, develop ]
-
+    branches: [main, master, develop]
+    paths-ignore:
+      - "docs/**"
+      - "**.md"
+      - ".vitepress/**"
 jobs:
   test:
     runs-on: ${{ matrix.os }}
-    
+
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
@@ -23,7 +30,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -43,11 +50,10 @@ jobs:
 
       - name: Package extension
         run: npm run package
-        
+
       - name: Upload VSIX artifact
         uses: actions/upload-artifact@v4
         if: matrix.os == 'ubuntu-latest'
         with:
           name: vsix-package
-          path: '*.vsix'
-
+          path: "*.vsix"
