--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,22 +2,14 @@ name: Deploy Documentation
 
 on:
   push:
-    branches:
-      - main
-      - master
-    paths:
-      - 'docs/**'
-      - '.vitepress/**'
-      - 'README.md'
-  workflow_dispatch: # 允许手动触发
+    branches: [main]
+  workflow_dispatch:
 
-# 设置 GITHUB_TOKEN 的权限以允许部署到 GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# 只允许一个并发部署，跳过正在进行的部署队列
 concurrency:
   group: pages
   cancel-in-progress: false
@@ -28,37 +20,42 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0 # 需要完整历史以获取最后更新时间
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
+
+      - name: Install root dependencies
+        run: npm ci
+
+      - name: Generate API docs
+        run: npm run docs:api
+
+      - name: Install docs dependencies
+        working-directory: ./docs
+        run: npm ci
+
+      - name: Build Docusaurus
+        working-directory: ./docs
+        run: npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build documentation
-        run: npm run docs:build
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: docs/.vitepress/dist
+          path: ./docs/build
 
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
