--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "vscode 状态栏",
     "status bar"
   ],
-  "icon": "docs//public/logo.png",
+  "icon": "docs/static/logo.png",
   "activationEvents": [
     "onView:bookList"
   ],
@@ -113,7 +113,7 @@
         {
           "id": "GhostReader",
           "title": "GhostReader",
-          "icon": "docs/public/logo.svg"
+          "icon": "docs/static/logo.svg"
         }
       ]
     },
@@ -159,9 +159,9 @@
     "test": "vscode-test",
     "package": "vsce package",
     "publish": "vsce publish",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:api": "typedoc",
+    "docs:dev": "npm run docs:api && cd docs && npm run start",
+    "docs:build": "npm run docs:api && cd docs && npm run build"
   },
   "devDependencies": {
     "@types/mocha": "^10.0.10",
@@ -175,7 +175,8 @@
     "esbuild": "^0.24.2",
     "eslint": "^9.18.0",
     "prettier": "^3.4.2",
-    "typescript": "^5.7.2",
-    "vitepress": "^1.0.0"
+    "typedoc": "^0.28.0",
+    "typedoc-plugin-markdown": "^4.4.0",
+    "typescript": "^5.7.2"
   }
 }
