--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,9 +42,13 @@ jobs:
             - name: Run type check
               run: npm run compile
 
-            - name: Run tests
+            - name: Run tests (Linux)
+              if: runner.os == 'Linux'
+              run: xvfb-run -a npm test
+
+            - name: Run tests (Windows/macOS)
+              if: runner.os != 'Linux'
               run: npm test
-              continue-on-error: true
 
             - name: Build extension
               run: npm run build
@@ -81,10 +85,10 @@ jobs:
             - name: Build and package extension
               run: |
                   npm run build
-                  npm run package
+                  xvfb-run -a npm run package
 
             - name: Publish to VSCode Marketplace
-              run: npx vsce publish -p $VSCE_PAT
+              run: xvfb-run -a npx vsce publish -p $VSCE_PAT
               env:
                   VSCE_PAT: ${{ secrets.VSCE_PAT }}
 
