--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,8 @@
-name: CI/CD
+name: CI
 
 on:
     push:
         branches: [main, master, develop]
-        tags:
-            - "v*"
         paths-ignore:
             - "docs/**"
             - "**.md"
@@ -62,46 +60,5 @@ jobs:
               with:
                   name: vsix-package
                   path: "*.vsix"
+                  retention-days: 7
 
-    publish:
-        # 只在 tag 推送时执行，并且依赖 test job 成功
-        if: startsWith(github.ref, 'refs/tags/v')
-        needs: test
-        runs-on: ubuntu-latest
-
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "20"
-                  cache: "npm"
-
-            - name: Install dependencies
-              run: npm ci
-
-            - name: Build and package extension
-              run: |
-                  npm run build
-                  xvfb-run -a npm run package
-
-            - name: Publish to VSCode Marketplace
-              run: xvfb-run -a npx vsce publish -p $VSCE_PAT
-              env:
-                  VSCE_PAT: ${{ secrets.VSCE_PAT }}
-
-            - name: Get version from tag
-              id: get_version
-              run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-
-            - name: Create GitHub Release
-              uses: softprops/action-gh-release@v1
-              with:
-                  files: "*.vsix"
-                  generate_release_notes: true
-                  draft: false
-                  prerelease: false
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
