--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,58 +1,60 @@
 name: Publish
 
 on:
-    push:
-        tags:
-            - "v*"
+  push:
+    tags:
+      - "v*"
+
+permissions:
+  contents: write
 
 jobs:
-    publish:
-        runs-on: ubuntu-latest
+  publish:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Setup Node.js
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "20"
-                  cache: "npm"
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
 
-            - name: Install dependencies
-              run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-            - name: Run linter
-              run: npm run lint:check
+      - name: Run linter
+        run: npm run lint:check
 
-            - name: Run type check
-              run: npm run compile
+      - name: Run type check
+        run: npm run compile
 
-            - name: Run tests
-              run: xvfb-run -a npm test
+      - name: Run tests
+        run: xvfb-run -a npm test
 
-            - name: Build extension
-              run: npm run build
+      - name: Build extension
+        run: npm run build
 
-            - name: Package extension
-              run: xvfb-run -a npm run package
+      - name: Package extension
+        run: xvfb-run -a npm run package
 
-            - name: Publish to VSCode Marketplace
-              run: xvfb-run -a npx vsce publish -p $VSCE_PAT
-              env:
-                  VSCE_PAT: ${{ secrets.VSCE_PAT }}
+      - name: Publish to VSCode Marketplace
+        run: xvfb-run -a npx vsce publish -p $VSCE_PAT
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
 
-            - name: Get version from tag
-              id: get_version
-              run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+      - name: Get version from tag
+        id: get_version
+        run: echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
-            - name: Create GitHub Release
-              uses: softprops/action-gh-release@v1
-              with:
-                  files: "*.vsix"
-                  generate_release_notes: true
-                  draft: false
-                  prerelease: false
-              env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: "*.vsix"
+          generate_release_notes: true
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
