--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "GhostReader",
   "displayName": "GhostReader",
-  "description": "在vscode状态栏阅读小说。支持: 1.翻页 2.跳转到指定页码 3.暂停阅读(隐藏阅读内容) 4.快捷键阅读(Reading和Coding模式随时切换, 避免编码时快捷键冲突)",
+"description": "Ghost READER 是一款 VS Code 插件，让你可以在状态栏悄悄阅读小说。",
 "version": "2.1.0",
   "publisher": "wllzhang",
   "author": {
