--- a/package.json
+++ b/package.json
@@ -149,17 +149,17 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run build",
-    "build": "node build.js --production",
-    "watch": "node build.js --watch",
+    "build": "node scripts/build.js --production",
+    "watch": "node scripts/build.js --watch",
     "compile": "tsc --noEmit",
     "pretest": "npm run compile && npm run lint:check",
-    "lint": "eslint src --fix",
-    "lint:check": "eslint src",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "test": "vscode-test",
+    "lint": "eslint src --fix --config config/eslint.config.js",
+    "lint:check": "eslint src --config config/eslint.config.js",
+    "format": "prettier --write \"src/**/*.ts\" --config config/prettierrc.json",
+    "test": "vscode-test --config scripts/vscode-test.mjs",
     "package": "vsce package",
     "publish": "vsce publish",
-    "docs:api": "typedoc",
+    "docs:api": "typedoc --options config/typedoc.json",
     "docs:dev": "npm run docs:api && cd docs && npm run start",
     "docs:build": "npm run docs:api && cd docs && npm run build"
   },
