--- a/package.json
+++ b/package.json
@@ -52,6 +52,13 @@
           "default": 0,
           "minimum": 0,
           "description": "停留在当前行多少秒后自动停止（0为永不停止）"
+        },
+        "ghostReader.displayWidth": {
+          "type": "number",
+          "default": 45,
+          "minimum": 10,
+          "maximum": 200,
+          "description": "状态栏每次显示的最大字符数"
         }
       }
     },
