--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,64 +1,266 @@
 name: CI
 
 on:
-    push:
-        branches: [main, master, develop]
-        paths-ignore:
-            - "docs/**"
-            - "**.md"
-    pull_request:
-        branches: [main, master, develop]
-        paths-ignore:
-            - "docs/**"
-            - "**.md"
+  push:
+    branches: [main, master, develop]
+    tags:
+      - "v*"
+  pull_request:
+    branches: [main, master, develop]
+
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: false
 
 jobs:
-    test:
-        runs-on: ${{ matrix.os }}
+  # CI 测试 - 多平台测试
+  test:
+    runs-on: ${{ matrix.os }}
 
-        strategy:
-            matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
-                node-version: [20.x]
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        node-version: [20.x]
 
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-            - name: Setup Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v4
-              with:
-                  node-version: ${{ matrix.node-version }}
-                  cache: "npm"
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
 
-            - name: Install dependencies
-              run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-            - name: Run linter
-              run: npm run lint:check
+      - name: Run linter
+        run: npm run lint:check
 
-            - name: Run type check
-              run: npm run compile
+      - name: Run type check
+        run: npm run compile
 
-            - name: Run tests (Linux)
-              if: runner.os == 'Linux'
-              run: xvfb-run -a npm test
+      - name: Run tests (Linux)
+        if: runner.os == 'Linux'
+        run: xvfb-run -a npm test
 
-            - name: Run tests (Windows/macOS)
-              if: runner.os != 'Linux'
-              run: npm test
+      - name: Run tests (Windows/macOS)
+        if: runner.os != 'Linux'
+        run: npm test
 
-            - name: Build extension
-              run: npm run build
+      - name: Build extension
+        run: npm run build
 
-            - name: Package extension
-              run: npm run package
+      - name: Package extension
+        run: npm run package
 
-            - name: Upload VSIX artifact
-              uses: actions/upload-artifact@v4
-              if: matrix.os == 'ubuntu-latest'
-              with:
-                  name: vsix-package
-                  path: "*.vsix"
-                  retention-days: 7
+      - name: Upload VSIX artifact
+        uses: actions/upload-artifact@v4
+        if: matrix.os == 'ubuntu-latest'
+        with:
+          name: vsix-package
+          path: "*.vsix"
+          retention-days: 7
 
+  # 当 package.json 变化时，检测版本并自动打 tag
+  auto-tag:
+    if: |
+      github.ref == 'refs/heads/main' &&
+      github.event_name == 'push' &&
+      !startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    needs: [test]
+    outputs:
+      version: ${{ steps.current.outputs.version }}
+      should_publish: ${{ steps.create_tag.outputs.created }}
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
+
+      - name: Get current version
+        id: current
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Get previous version
+        id: previous
+        run: |
+          git checkout HEAD~1 -- package.json 2>/dev/null || echo "No previous commit"
+          PREV_VERSION=$(node -p "require('./package.json').version" 2>/dev/null || echo "0.0.0")
+          git checkout HEAD -- package.json
+          echo "version=$PREV_VERSION" >> $GITHUB_OUTPUT
+
+      - name: Check if version changed
+        id: check
+        run: |
+          if [ "${{ steps.current.outputs.version }}" != "${{ steps.previous.outputs.version }}" ]; then
+            echo "changed=true" >> $GITHUB_OUTPUT
+            echo "Version changed: ${{ steps.previous.outputs.version }} → ${{ steps.current.outputs.version }}"
+          else
+            echo "changed=false" >> $GITHUB_OUTPUT
+            echo "Version unchanged: ${{ steps.current.outputs.version }}"
+          fi
+
+      - name: Check if tag exists
+        id: tag_exists
+        if: steps.check.outputs.changed == 'true'
+        run: |
+          if git rev-parse "v${{ steps.current.outputs.version }}" >/dev/null 2>&1; then
+            echo "exists=true" >> $GITHUB_OUTPUT
+            echo "Tag v${{ steps.current.outputs.version }} already exists"
+          else
+            echo "exists=false" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Create and push tag
+        id: create_tag
+        if: steps.check.outputs.changed == 'true' && steps.tag_exists.outputs.exists == 'false'
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git tag -a "v${{ steps.current.outputs.version }}" -m "Release v${{ steps.current.outputs.version }}"
+          git push origin "v${{ steps.current.outputs.version }}"
+          echo "✅ Created and pushed tag v${{ steps.current.outputs.version }}"
+          echo "created=true" >> $GITHUB_OUTPUT
+
+  # 发布流程
+  publish:
+    runs-on: ubuntu-latest
+    needs: [test, auto-tag]
+    # 当手动推送 tag 时直接运行，或者 auto-tag 成功创建了新 tag 时运行
+    if: |
+      always() && (
+        startsWith(github.ref, 'refs/tags/v') ||
+        (needs.auto-tag.result == 'success' && needs.auto-tag.outputs.should_publish == 'true')
+      )
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.auto-tag.outputs.version && format('v{0}', needs.auto-tag.outputs.version) || github.ref }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run linter
+        run: npm run lint:check
+
+      - name: Run type check
+        run: npm run compile
+
+      - name: Run tests
+        run: xvfb-run -a npm test
+
+      - name: Build extension
+        run: npm run build
+
+      - name: Package extension
+        run: xvfb-run -a npm run package
+
+      - name: Publish to VSCode Marketplace
+        run: xvfb-run -a npx vsce publish -p $VSCE_PAT
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
+
+      - name: Get version
+        id: get_version
+        run: |
+          if [ -n "${{ needs.auto-tag.outputs.version }}" ]; then
+            echo "VERSION=${{ needs.auto-tag.outputs.version }}" >> $GITHUB_OUTPUT
+          else
+            echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ steps.get_version.outputs.VERSION }}
+          files: "*.vsix"
+          generate_release_notes: true
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  # 构建文档
+  build-docs:
+    # 当手动推送 tag 时直接运行，或者 auto-tag 成功创建了新 tag 时运行
+    if: |
+      always() && (
+        startsWith(github.ref, 'refs/tags/v') ||
+        (needs.auto-tag.result == 'success' && needs.auto-tag.outputs.should_publish == 'true')
+      )
+    runs-on: ubuntu-latest
+    needs: [test, auto-tag]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.auto-tag.outputs.version && format('v{0}', needs.auto-tag.outputs.version) || github.ref }}
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+
+      - name: Install root dependencies
+        run: npm ci
+
+      - name: Generate API docs
+        run: npm run docs:api
+
+      - name: Install docs dependencies
+        working-directory: ./docs
+        run: npm ci
+
+      - name: Build Docusaurus
+        working-directory: ./docs
+        run: npm run build
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./docs/build
+
+  # 部署文档
+  deploy-docs:
+    # 当手动推送 tag 时直接运行，或者 auto-tag 成功创建了新 tag 时运行
+    if: |
+      always() && (
+        startsWith(github.ref, 'refs/tags/v') ||
+        (needs.auto-tag.result == 'success' && needs.auto-tag.outputs.should_publish == 'true')
+      )
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: [test, auto-tag, build-docs]
+
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
